--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="Neuroaesthetics" content="neuroaesthetics in contemporary art">
 
 
-                    <meta property="og:title" content="Waarom Vlamingen toch zo van Nederlanders houden" />
-                    <meta property="og:image" content="http://static.nrc.nl/images/w640/1106mediajanmulder.jpg" />
+                    <meta property="og:title" content="a excurse on neuroaesthetics and contemporary art" />
+                    <meta property="og:image" content="img/1456173679229.jpg" />
                     <meta property="dc:creator" content="The name of the author of page" />
                     <meta property="twitter:site" content="@nrc">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
