--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ div.img{
 .footnote {
   float: footnote;
   font-size: 0.7em;
-  footnote-style-position: inside;
+  footnote-style-position:left;
   text-indent: 1em;
   color: blue;
 }
@@ -365,7 +365,7 @@ q.skipendquote:after { content: "" }
 pre { display: none }
 
 @media screen {
-  html { background: url(brainwebsite-06.png);
+  html { background: gray;
          margin: 3em; }
   body { font: 22px / 1.4 "Radley", serif; letter-spacing: 0; word-spacing: 0 }
   section { 
