--- a/index2.html
+++ b/index2.html
@@ -370,9 +370,11 @@ pre { display: none }
          margin: 3em; }
 
   body { font: 62px / 1.4 "Radley", serif;
-         letter-spacing: 0; 
+         letter-spacing: ; 
          word-spacing: 0 ;
        
+         font-color:green;
+
        }
 
   section { 
