--- a/index.html
+++ b/index.html
@@ -391,8 +391,15 @@ q.skipendquote:after { content: "" }
 
 pre { display: none }
 
+
 @media screen {
- html { background: #eee; margin: 3em; }
+
+ html { background: url(26472.gif);top right no-repeat; background-attachment:fixed; }
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; 
+      }
  body { font: 22px / 1.4 "Radley", serif; letter-spacing: 0; word-spacing: 0 }
  section { 
   padding: 1.5em;
@@ -430,7 +437,7 @@ Neuroaesthetics is a quite new but rapidly growing field. I want to take a look 
 
 <h5>as it affects</h5> -->
 
-<h3>Neuroaesthtics</h3>
+<h3>Neuroaesthetics</h3>
 
 <!-- <h5>with remarks</h5>
 
@@ -440,7 +447,7 @@ Neuroaesthetics is a quite new but rapidly growing field. I want to take a look 
 
 <h4>and other writers.</h4> -->
 <hr class="double">
-<h4>Royal Academie of Art, The Hauge</h4>
+<h4>Royal Academy of Art, The Hauge</h4>
 
 <h5>Antonia Schwaiger</h5>
 
