--- a/classical/index.html
+++ b/classical/index.html
@@ -188,7 +188,7 @@ hr.double { width: 4em; height: 1pt; border-bottom: 0.2pt solid black; border-to
 .titlepage {
  text-align: center;
  font-variant: small-caps;
- prince-text-replace: none;
+
  page: cover;
 }
 
@@ -356,6 +356,7 @@ section.first.chapter header {
  text-align: center;
  font-variant: small-caps;
  prince-text-replace: none;
+
 }
 
 /* footnotes */
@@ -392,17 +393,31 @@ q.skipendquote:after { content: "" }
 pre { display: none }
 
 @media screen {
- html { background: #eee; margin: 3em; }
+ html { background: url(brain.gif);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center; 
+
+
+         }
+
  body { font: 22px / 1.4 "Radley", serif; letter-spacing: 0; word-spacing: 0 }
  section { 
   padding: 1.5em;
   max-width: 40em;
   margin: 1em auto;
-  background: white;
+  background: white,;
+        
+
 
   border-style: solid;
   border-color: #ff0000 #0000ff;
 }
+
+p{font-size: 30px;
+
+  font-family: serif;
+  }
  }
 
  .footnote:before { content: " (" }
