--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ pre { display: none }
 
 @media screen {
 
- html { background: url(26472.gif);top right no-repeat; background-attachment:fixed; }
+ html { background: white;top right no-repeat; background-attachment:fixed; }
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
